--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,21 +9,7 @@ rand = "0.8.5"
 
 [dependencies.bevy]
 version = "0.14.0"
-features = [
-    "bevy_asset",
-    "bevy_audio",
-    "bevy_winit",
-    "bevy_core_pipeline",
-    "bevy_sprite",
-    "bevy_text",
-    "bevy_ui",
-    "multi_threaded",
-    "png",
-    "vorbis",
-    "x11",
-    "default_font",
-    "webgl2",
-]
+features = ["bevy_asset", "bevy_audio", "bevy_winit", "bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "multi_threaded", "png", "vorbis", "x11", "default_font", "webgl2", "mp3"]
 
 [workspace]
 resolver = "2"
