--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bevy_embedded_assets = "0.11.0"
 bevy_kira_audio = "0.20.0"
+log = { version= "0.4", features= ["release_max_level_off"]}
 
 [dependencies.bevy]
 version = "0.14.0"
